// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title matches its snapshots: with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TrackingDialog
    acceptTracking={[Function]}
    denyTracking={[Function]}
    dialogVisible={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <button
          className="jsx-3290211443 button accept"
          onClick={[Function]}
        >
          <ThumbsUp
            color="currentColor"
            size="24"
          />
        </button>,
        <button
          className="jsx-3290211443 button"
          onClick={[Function]}
        >
          <ThumbsDown
            color="currentColor"
            size="24"
          />
        </button>,
        <JSXStyle
          css=".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}"
          styleId="3290211443"
        />,
      ],
      "isVisible": false,
      "message": "I have a tiny bit of analytics to see how people use this cv. You cool with that?",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ThumbsUp
            color="currentColor"
            size="24"
          />,
          "className": "jsx-3290211443 button accept",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "currentColor",
            "size": "24",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ThumbsDown
            color="currentColor"
            size="24"
          />,
          "className": "jsx-3290211443 button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "currentColor",
            "size": "24",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": ".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}",
          "styleId": "3290211443",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <button
            className="jsx-3290211443 button accept"
            onClick={[Function]}
          >
            <ThumbsUp
              color="currentColor"
              size="24"
            />
          </button>,
          <button
            className="jsx-3290211443 button"
            onClick={[Function]}
          >
            <ThumbsDown
              color="currentColor"
              size="24"
            />
          </button>,
          <JSXStyle
            css=".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}"
            styleId="3290211443"
          />,
        ],
        "isVisible": false,
        "message": "I have a tiny bit of analytics to see how people use this cv. You cool with that?",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ThumbsUp
              color="currentColor"
              size="24"
            />,
            "className": "jsx-3290211443 button accept",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "currentColor",
              "size": "24",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ThumbsDown
              color="currentColor"
              size="24"
            />,
            "className": "jsx-3290211443 button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "currentColor",
              "size": "24",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": ".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}",
            "styleId": "3290211443",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Title matches its snapshots: with props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TrackingDialog
    acceptTracking={[MockFunction]}
    denyTracking={[MockFunction]}
    dialogVisible={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <button
          className="jsx-3290211443 button accept"
          onClick={[MockFunction]}
        >
          <ThumbsUp
            color="currentColor"
            size="24"
          />
        </button>,
        <button
          className="jsx-3290211443 button"
          onClick={[MockFunction]}
        >
          <ThumbsDown
            color="currentColor"
            size="24"
          />
        </button>,
        <JSXStyle
          css=".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}"
          styleId="3290211443"
        />,
      ],
      "isVisible": true,
      "message": "I have a tiny bit of analytics to see how people use this cv. You cool with that?",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ThumbsUp
            color="currentColor"
            size="24"
          />,
          "className": "jsx-3290211443 button accept",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "currentColor",
            "size": "24",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ThumbsDown
            color="currentColor"
            size="24"
          />,
          "className": "jsx-3290211443 button",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "currentColor",
            "size": "24",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": ".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}",
          "styleId": "3290211443",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <button
            className="jsx-3290211443 button accept"
            onClick={[MockFunction]}
          >
            <ThumbsUp
              color="currentColor"
              size="24"
            />
          </button>,
          <button
            className="jsx-3290211443 button"
            onClick={[MockFunction]}
          >
            <ThumbsDown
              color="currentColor"
              size="24"
            />
          </button>,
          <JSXStyle
            css=".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}"
            styleId="3290211443"
          />,
        ],
        "isVisible": true,
        "message": "I have a tiny bit of analytics to see how people use this cv. You cool with that?",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ThumbsUp
              color="currentColor"
              size="24"
            />,
            "className": "jsx-3290211443 button accept",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "currentColor",
              "size": "24",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ThumbsDown
              color="currentColor"
              size="24"
            />,
            "className": "jsx-3290211443 button",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "currentColor",
              "size": "24",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": ".button.jsx-3290211443{font-size:1em;display:inline-block;border:1px solid #444;border-radius:0.25em;padding:0.5em 1em;text-align:center;margin:0 1em;color:#444;}",
            "styleId": "3290211443",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
